err/sauri.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Sauri-0.4.egg-info'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Listing './lib/python3.5/site-packages/pika-0.11.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/sauri'...
Listing './lib/python3.5/site-packages/sauri/bin'...
Listing './lib/python3.5/site-packages/sauri/cfg'...
Listing './lib/python3.5/site-packages/sauri/common'...
Listing './lib/python3.5/site-packages/sauri/messaging'...
Listing './lib/python3.5/site-packages/sauri/messaging/blocking'...
Listing './lib/python3.5/site-packages/sauri/messaging/blocking/test'...
Listing './lib/python3.5/site-packages/sauri/sensors'...
Listing './lib/python3.5/site-packages/sauri/sensors/temperature'...
Compiling './lib/python3.5/site-packages/sauri/sensors/temperature/ds18b20.py'...
***   File "./lib/python3.5/site-packages/sauri/sensors/temperature/ds18b20.py", line 57
    except ValueError, ve:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sauri/sensors/temperature/test'...
Listing './lib/python3.5/site-packages/sauri/sensors/test'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
